gtk+3.0 (3.20.8-1) UNRELEASED; urgency=medium

  * Team upload
  * New upstream release
  * debian/control.in:
    - Drop unnecessary version number from dependency on adwaita-icon-theme
  * debian/patches/0001-Revert-Improve-external-drives-detection.patch:
    - Dropped, applied in new version

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 04 Aug 2016 13:14:40 -0400

gtk+3.0 (3.20.7-1) unstable; urgency=medium

  [ Laurent Bigonville ]
  * debian/control.in: Add hicolor-icon-theme as a hard dependency, the
    package is small and only provides the directory structure of the theme.
  * debian/control.in: Move adwaita-icon-theme dependency to the main package.

  [ Emilio Pozuelo Monfort ]
  * New upstream release.
  * debian/patches/0001-Revert-Improve-external-drives-detection.patch:
    + Revert upstream change that requires unstable glib 2.49.1.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 04 Aug 2016 19:07:21 +0200

gtk+3.0 (3.20.6-2) unstable; urgency=medium

  * Team upload

  [ Laurent Bigonville ]
  * Drop patches/015_default-fallback-icon-theme.patch: The default icon theme
    is already defined as Adwaita, not need to also define the fallback theme.

  [ Simon McVittie ]
  * d/rules: reset XDG_CONFIG_HOME, XDG_CACHE_HOME, XDG_DATA_HOME so that
    they are based on the temporary HOME
  * Backport patch from upstream to mark tiled Mutter/Shell windows
    as GDK_WINDOW_STATE_TILED under Wayland (with mutter >= 3.20.2-2)
  * Add my patch from upstream bug 755947 to disable character-cell-based
    size contraints for TILED windows, so that gnome-terminal can snap to
    half the screen under Wayland

 -- Simon McVittie <smcv@debian.org>  Sat, 25 Jun 2016 00:19:51 +0100

gtk+3.0 (3.20.6-1) unstable; urgency=medium

  * New upstream release.
  * Drop revert-scrolledwindow-Remove-child-before-destroying.patch, merged
    upstream.
  * Re-enable test-suite.

 -- Michael Biebl <biebl@debian.org>  Tue, 31 May 2016 21:33:34 +0200
