@@ -2,13 +2,15 @@ Source: gtk+3.0
 Section: libs
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Michael Biebl <biebl@debian.org>
+Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Jeremy Bicha <jbicha@ubuntu.com>, Michael Biebl <biebl@debian.org>
 Build-Depends: debhelper (>= 9.20141010),
                cdbs (>= 0.4.93),
                gnome-pkg-tools (>= 0.11),
                dpkg-dev (>= 1.17.14),
                gtk-doc-tools (>= 1.20),
                dh-autoreconf,
+               docbook-xml,
+               docbook-xsl,
                gettext,
                pkg-config,
                autotools-dev,
@@ -30,6 +32,7 @@ Build-Depends: debhelper (>= 9.20141010),
                libx11-dev (>= 2:1.3.3-2),
                libxext-dev (>= 2:1.1.1-3),
                libxi-dev (>= 2:1.3-4),
+               libxml2-utils,
                libxrandr-dev (>= 2:1.2.99),
                libxt-dev,
                libxrender-dev (>= 1:0.9.5-2),
@@ -48,10 +51,9 @@ Build-Depends: debhelper (>= 9.20141010),
                libjson-glib-dev,
                gobject-introspection (>= 1.41.3),
                libgirepository1.0-dev (>= 1.39.0),
+               xsltproc,
                xvfb <!nocheck>
-Build-Depends-Indep: docbook-xml,
-                     docbook-utils,
-                     libglib2.0-doc,
+Build-Depends-Indep: libglib2.0-doc,
                      libatk1.0-doc,
                      libpango1.0-doc,
                      libcairo2-doc
