@@ -74,6 +74,7 @@ DEB_CONFIGURE_FLAGS_shared = \
 			--enable-broadway-backend \
 			--enable-x11-backend \
 			--enable-gtk-doc \
+			--enable-man \
 			--enable-shared \
 			--enable-introspection \
 			--enable-cloudprint \
