@@ -1,11 +1,20 @@
 gtk+3.0 (3.20.8-1) UNRELEASED; urgency=medium
 
+  [ Jeremy Bicha ]
   * Team upload
   * New upstream release
   * debian/control.in:
     - Drop unnecessary version number from dependency on adwaita-icon-theme
   * debian/patches/0001-Revert-Improve-external-drives-detection.patch:
     - Dropped, applied in new version
+
+  [ Simon McVittie ]
+  * Explicitly build-depend on docbook-xsl, libxml2-utils and xsltproc
+    to be able to generate man pages from their source code. Move docbook-xml
+    to Build-Depends since the man pages are in an Architecture: any package.
+  * Drop Build-Depends-Indep on docbook-utils, the old SGML toolchain,
+    which is currently uninstallable (#834616) and does not appear to be
+    needed for anything
 
  -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 04 Aug 2016 13:14:40 -0400
 
